@@ -19,9 +19,11 @@ DIST patch-2.6.32.27.bz2 676264 RMD160 0e88faace47a53442cbbbcbf7f5f7802e00ba3ce 
 DIST patch-2.6.32.28.bz2 687529 RMD160 fd2ab29f3f3f4bd22ae3ca57f96d10f3cbda245d SHA1 5b9f13c580092dbedb70180de9553cac8f048684 SHA256 c0e7f8c438210e05b09c698a16990c355f218518b87e54046186c540e9bfa827
 DIST patch-2.6.35.9.bz2 184494 RMD160 875835bdd6726a0e8fcbefcdb91b09489cc548ba SHA1 49a7240a24b179553fa27873df4e65d288a2bdbe SHA256 337a1649110d5bd4d08b178b9437d88df692b2d4ed62b988083a132d0e057725
 DIST patch-2.6.36.2.bz2 98425 RMD160 92fdef7ecbc520f46d24b0981689fb2174cb3c0c SHA1 e70de463a1b3a287ef47f4950c3acb8f5b43ed99 SHA256 3ccff8d0ec6a6dfb76e86f8dc337ff00e699c5c9ea6d553866188b4d4555d3e5
+DIST patch-2.6.36.3.bz2 140429 RMD160 2284b5940481e62e6e1b91c4f324333ecc3dba8d SHA1 e556a85a866003939d78068c63bd2c7920e27cc5 SHA256 e3b1a8e0461eabe7175f8078569916cc94de38524157ae3bc00cc3cddc618af9
 EBUILD calculate-sources-2.6.32.27.ebuild 741 RMD160 be7ac9ba69c0fdaac93557404c547621e1c93937 SHA1 cfa2b0ae9e5b1d6e134b28c055e4532bd7948a9d SHA256 64eb8b8bcc41963a457ea343aba414ae7e388260912b5e170db5e9298c23176c
 EBUILD calculate-sources-2.6.32.28.ebuild 754 RMD160 84f99a822f8d4078ffbd2373d40fd905a134794b SHA1 7808e3c4e2a54f9955b120dcbcf85f2fd8ab396b SHA256 959bb169c8427191cbf9a4e5c74e871bf699ae0eef17068fbc85b24d2bd55599
 EBUILD calculate-sources-2.6.35.9.ebuild 1324 RMD160 42d73ad5fcc292c90df73cbb0b4933ab7fbf4c74 SHA1 7a23fb44ad946e45f804bc9e7539905e36545124 SHA256 94fd25687d0f182ae4fa6a59c91605dbb326bffa171195bf92f837e96d3e6d64
 EBUILD calculate-sources-2.6.36.2.ebuild 1330 RMD160 c56242f09611ce06d193b9aae1acd42369b119ae SHA1 a02dde56690d2c9d99d7b8d21eb60cc7a15ce6c3 SHA256 ea756887d381b6fff444d5efe7f97c69d4917240ff93dd12f2d804a0fe9353ad
-MISC ChangeLog 4822 RMD160 ed537f2b24b55f2beb1f7d65a0a107454933f622 SHA1 620fd0fbed08acc4f1c260c233b4f15ad6dc9e16 SHA256 7ecaadd218e950fba8633109320e11e9193cc345cab34a8f7e6b782c46ed2abd
+EBUILD calculate-sources-2.6.36.3.ebuild 1332 RMD160 6ac1bdc9aa88a71979a8240515f6c2e82a745c04 SHA1 9a0b64e14e7c6c54afaadbab6b1988c68923c5dc SHA256 b573a726df88495a8dbfc645425a2b67f3c633807fb596f3643c739eba9dc487
+MISC ChangeLog 4985 RMD160 c28a8c3bb7c87f6b40f38f0edeb442485decf263 SHA1 9fd709fc2d571c828d10e49f468a4ee8ddf10997 SHA256 d3048f6d655555a1f994713a82ed3043ac72c18371eaa8c7297f0220d9d1f7aa
 MISC metadata.xml 523 RMD160 855108e020b3f1fe32f843accc94a57f15affa0e SHA1 7fbeb862ff719c9ef63925b7f18104ff6eac27dd SHA256 997dc6d02e44eef86cc9653d7588b9f65e9033f02e28b3a8d98f48df82561f3c
