@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.36.3 (14 Feb 2011)
+
+  14 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +calculate-sources-2.6.36.3.ebuild:
+  Bump version.
+
 *calculate-sources-2.6.32.28 (31 Jan 2011)
 
   31 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
